# Solana-hacking-stuff

./: README.md
neodyme-workshop-remote-PoCs/: README.md
neodyme-workshop-remote-PoCs/level0-hack/: Cargo.toml  README.md  cicd.sh  native.sh  reset.sh
neodyme-workshop-remote-PoCs/level0-hack/pocs/: Cargo.toml
neodyme-workshop-remote-PoCs/level1-hack/: Cargo.toml  cicd.sh  native.sh
neodyme-workshop-remote-PoCs/level1-hack/level1/src/: processor.rs
neodyme-workshop-remote-PoCs/level1-hack/pocs/: Cargo.toml
neodyme-workshop-remote-PoCs/level2-hack/: Cargo.toml  cicd.sh
neodyme-workshop-remote-PoCs/level2-hack/pocs/: Cargo.toml
neodyme-workshop-remote-PoCs/level3-hack/: Cargo.toml  cicd.sh  native.sh
neodyme-workshop-remote-PoCs/level3-hack/native/: Cargo.toml
neodyme-workshop-remote-PoCs/level3-hack/pocs/: Cargo.toml
neodyme-workshop-remote-PoCs/level4-hack/: Cargo.toml  cicdh.sh
neodyme-workshop-remote-PoCs/level4-hack/client/: Cargo.toml
neodyme-workshop-remote-PoCs/level4-hack/client/src/: lib.rs
neodyme-workshop-remote-PoCs/level4-hack/myspl/: Cargo.toml
neodyme-workshop-remote-PoCs/level4-hack/myspl/src/: lib.rs
neodyme-workshop-remote-PoCs/level4-hack/program/: Cargo.toml
neodyme-workshop-remote-PoCs/level4-hack/program/src/: lib.rs  processor.rs
