[package]
name = "cli"
version = "0.1.0"
edition = "2018"


[dependencies]
solana-program = "1.7.17"
spl-token = {path = "/Users/jiglesias/.cargo/registry/src/github.com-1ecc6299db9ec823/spl-token-3.1.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.0", features = ["no-entrypoint"]}
solana-sdk = "1.7.17"
solana-client = "1.7.17"
solana-transaction-status = "1.7.17"
owo-colors = "3.1.0"
borsh = "0.9.1"
borsh-derive = "0.9.1"


[lib]

